--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,24 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <a class="webim_button" href="#" rel="webim" ><img src="https://velomarketkolesoru.webim.ru/button.php" border="0"/></a>
     <script>history.scrollRestoration = "manual"</script>
   </body>
 </html>
+
+<!-- webim button generation date: 2022-06-02 version: 10.4.84 -->
+
+<script type="text/javascript">
+
+  webim = {
+    accountName: "velomarketkolesoru",
+    domain: "velomarketkolesoru.webim.ru"
+  };
+  (function () {
+    var s = document.createElement("script");
+    s.type = "text/javascript";
+    s.src = "https://velomarketkolesoru.webim.ru/js/button.js";
+    document.getElementsByTagName("head")[0].appendChild(s);
+  })();
+</script>
+<!-- /webim button -->
