css fix in catalog page

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-
+    <link rel="stylesheet" href="index.css">
     <title>Веломаркет Колесо</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <a class="webim_button" href="#" rel="webim" ><img src="https://velomarketkolesoru.webim.ru/button.php" border="0"/></a>
+    <a class="webim_button" href="#" rel="webim"><img src="https://velomarketkolesoru.webim.ru/button.php" border="0"/></a>
     <script>history.scrollRestoration = "manual"</script>
   </body>
 </html>
